# aegis-follow-up-mcp

./: .env.example  .gitignore  CLINICAL_SAFETY.md  Dockerfile  PRIVACY.md  PRODUCT_LIMITATIONS.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: tests.yml
app/: __init__.py  config.py  main.py  mcp_server.py
data/: synthetic_patient_bundle.json
docs/: codex_development_guide.md  commercial_workflow.md  demo_script.md  deployment.md  environment_profiles.md  final_code_review.md  judge_testing_guide.md  marketplace_listing.md  mcp_inspector.md  pilot_runbook.md  post_hackathon_roadmap.md  production_readiness_checklist.md  prompt_opinion_agent_instructions.md  prompt_opinion_setup.md  render_gemini_checklist.md  risk_register.md  sprint_1.md  sprint_10.md  sprint_2.md  sprint_3.md  sprint_4.md  sprint_5.md  sprint_6.md  sprint_7.md  sprint_8.md  sprint_9.md  submission_copy.md  submission_readiness_checklist.md
scripts/: smoke_mcp.py
tests/: test_abnormal_results.py  test_ai_follow_up_brief.py  test_audit_trail.py  test_edge_cases.py  test_ehr_integration.py  test_fhir_connection_status.py  test_fhir_connectivity.py  test_fhir_context.py  test_fixtures.py  test_follow_up_brief.py  test_follow_up_priority.py  test_follow_up_tasks.py  test_handoff_payload.py  test_health.py  test_mcp_runtime_context.py  test_observations.py  test_output_validation.py  test_patient_snapshot.py  test_product_foundation_docs.py  test_prompt_opinion_fhir_context_extension.py  test_rule_profiles.py  test_safe_logging.py  test_workflow_state.py
(+33 files in other folders)
